--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=dashboard
+
+# MySQL ?????? ?? ??
+
+# MySQL ?? ?? (localhost ?? MySQL ??? IP ??)
+spring.datasource.url=jdbc:mysql://210.122.36.128:3306/school?useSSL=false&serverTimezone=UTC
+
+# MySQL ????
+spring.datasource.username=school_di
+
+# MySQL ????
+spring.datasource.password=Roqkf!@38xptmxm
+
+# MySQL JDBC ???? ???
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HikariCP ?? ? ?? (?? ?? ?)
+spring.datasource.hikari.maximum-pool-size=10
+
+# Hibernate ??
+spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate SQL ???
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
