--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,11 @@
-spring.application.name=dashboard
-
 # MySQL Connection
-spring.datasource.url=jdbc:mysql://210.122.36.128:3306/school?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&serverTimezone=UTC
 
 # DB username
-spring.datasource.username=school_di
+spring.datasource.username=root
 
 # DB User Password
-spring.datasource.password=Roqkf!@38xptmxm
+spring.datasource.password=oldplace0312@
 
 # MySQL JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
